--- a/Buoi4/style.css
+++ b/Buoi4/style.css
@@ -27,6 +27,7 @@ span{
 }
 input{
     display: inline-block;
+    width: 25%;
 }
 
 #b1{
@@ -47,4 +48,7 @@ button{
     padding: 5px 15px 5px 15px;
     margin: auto;
     display: block;
+}
+ul{
+    text-align: left;
 }
