--- a/Buoi4/style.css
+++ b/Buoi4/style.css
@@ -1,54 +1,148 @@
+body{
+    background: linear-gradient(135deg,rgb(54, 54, 54),rgb(26, 25, 25)) ;
+    margin: 0;
+}
+
 form{
-    border: black solid;
-    width: 50%;
-    height: 200px;
-    background-color: pink;
-    margin: auto;
-
+    border-bottom: rgb(131, 131, 131) solid 2px;
+    border-right: rgb(131, 131, 131) solid 2px;
+    width: 25%;
+    height: 320px;
+    background-color: rgb(243, 242, 242);
+    position: absolute;
+    left: 23%;
+    top: 27%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
+    form>h1{
+        font-family: 'Courier New', Courier, monospace;
+        font-size: 25px;
+        display: block;
+        width: 80%;
+        text-align: center;
+        margin: 0;
+        padding-top: 8%;
+        border-bottom: solid 1px;
+        height: 15%;
+        color: rgb(41, 41, 41);
+    }
+    #b1{
+        text-align: center;
+        margin-top: 10px;
+        width: 100%;
+    }
+        .b2{
+        display: block;
+        width: 100%;
+        margin-bottom: 10px;
+        margin-top: 10px;
+        }
+            .b2>span{
+            width: 70%;
+            text-align: left;
+            margin-bottom: 5px;
+            font-family: 'Courier New', Courier, monospace;
+            font-weight: 400;
+            display: inline-block;
+            }
+            input{
+            display: block;
+            width: 70%;
+            background-color: rgba(68, 68, 68, 0.308);
+            border-radius: 3px;
+            margin: auto;
+            border: 1px solid;
+            }
+    form>button{
+        background-color: rgb(0, 204, 255);
+        text-align: center;
+        width: 30%;
+        padding: 5px 15px 5px 15px;
+        margin: auto;
+        margin-top: 25px;
+        border-radius: 5px;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
+
 #answer{
-    border: black solid;
-    width: 50%;
-    height: 200px;
-    background-color: rgb(77, 154, 255);
-    margin: auto;
-    margin-top: 50px;
-    text-align: center;
+    width: 40%;
+    height: 470px;
+    background-color: rgba(4, 157, 218, 0.712);
+    margin-left: 43%;
+    margin-top: 75px;
+    margin-bottom: 75px;
+    color: white;
 }
-strong{
-    font-size: 20px;
-    padding-top: 20px;
-    display: block;
-}
-span{
-    text-align: center;
-    display: inline-block;
-    width: 60px;
-}
-input{
-    display: inline-block;
-    width: 25%;
-}
+    #answer>h1{
+        width: 50%;
+        margin-left:40% ;
+        text-align: right;
+        height: 23%;
+        padding-top: 30px;
+        font-family:monospace;
+        font-size: 45px;
+        border-bottom: rgb(255, 255, 255) solid 4px;
+    }
+    #answer>strong{
+        font-size: 25px;
+        padding-top: 20px;
+        display: block;
+        margin-left: 20%;
+        font-family:'Courier New', Courier, monospace;
+    }
+    .b3{
+        display: flex;
+        margin-left: 25%;
+        justify-content: center;
+        background-color: rgba(255, 255, 255, 0.301);
+    }
+        .list{
+        text-align: center;
+        color: rgb(27, 27, 27);
+        width: 50%;
+        margin-top: 10px;
+        text-align: center;
+        display: inline-block;
+        padding-bottom: 0px;
+        }
+            .list>span{
+                display: block;
+                font-weight: bold;
+                font-size: 20px;
+                font-family: 'Courier New', Courier, monospace;
+                color: rgb(27, 27, 27);
+            }
 
-#b1{
+#box{
+    background-color: rgba(255, 56, 56, 0.788);
+    width: 30%;
+    height: 150px;
+    border-radius: 10px;
     text-align: center;
-    padding: 50px 0 25px 0;
+    padding: auto;
+    position: fixed;
+    top: 30%;
+    left: 35%;
+    display: none;
 }
-.b2{
-    padding: 5px 0 5px 0;
+    #box>p{
+        margin-top: 50px;
+        display: block;
+        font-size: 20px;
+        color: white;
+    }
+    #box>button{
+        background-color: rgb(0, 255, 157);
+        text-align: center;
+        width: 20%;
+        padding: 5px 15px 5px 15px;
+        margin: auto;
+        margin-left: 50%;
+        border-radius: 5px;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
 
-    display: block;
-    text-align: center;
-}
 
-button{
-    background-color: green;
-    text-align: center;
-    width: 25%;
-    padding: 5px 15px 5px 15px;
-    margin: auto;
-    display: block;
-}
-ul{
-    text-align: left;
-}
