--- a/Buoi7/style.css
+++ b/Buoi7/style.css
@@ -128,13 +128,44 @@ body{
         font-size: 12px;
         margin-top: 80px;
     }
+    .block3{
+        width: 700px;
+        margin: auto;
+        margin-top: 20px;
+        
+    }
+        .block3-1{
+            border-bottom: solid 1px rgba(233, 233, 233, 0.76);
+            height: 90px;
+            width: 100%;
+            display: flex;
+            align-items: center;
+        }
+            .block3-1a{
+                width: 13%;
+                display: flex;
+                flex-direction: column;
+                font-family: 'Noto Sans', sans-serif;
+                font-size: 30px;
+                font-weight: bolder;
+            }
+                .block3-1a>span{
+                    font-size: 10px;
+                    color: rgba(184, 184, 184, 0.582);
+                    font-weight: 500;
+                }
+            .block3-1b{
+                font-family: 'Noto Sans', sans-serif;
+                font-size: 22px;
+                padding-left: 50px;
+                font-weight: bolder;
+            }
 }
 @media(max-width: 1024px) {
     .head{
         height: 50px;
         width: 100%;
         border-bottom: solid 0.5px lightgray;
-        position: ;
         top: 0;
         background-color: white;
         z-index: 2;
@@ -191,7 +222,6 @@ body{
     .block1{
         position: relative;
         z-index: -1;
-        margin-top: ;
     }
         img{
             width: 280px;
@@ -260,13 +290,43 @@ body{
         font-size: 12px;
         margin-top: 80px;
     }
+    .block3{
+        width: 700px;
+        margin: auto;
+        margin-top: 20px;
+    }
+        .block3-1{
+            border-bottom: solid 1px rgba(233, 233, 233, 0.76);
+            height: 90px;
+            width: 100%;
+            display: flex;
+            align-items: center;
+        }
+            .block3-1a{
+                width: 13%;
+                display: flex;
+                flex-direction: column;
+                font-family: 'Noto Sans', sans-serif;
+                font-size: 30px;
+                font-weight: bolder;
+            }
+                .block3-1a>span{
+                    font-size: 10px;
+                    color: rgba(184, 184, 184, 0.582);
+                    font-weight: 500;
+                }
+            .block3-1b{
+                font-family: 'Noto Sans', sans-serif;
+                font-size: 22px;
+                padding-left: 50px;
+                font-weight: bolder;
+            }
 }
 @media(max-width: 768px) {
     .head{
         height: 50px;
         width: 100%;
         border-bottom: solid 0.5px lightgray;
-        position: ;
         top: 0;
         background-color: white;
         z-index: 2;
@@ -311,7 +371,7 @@ body{
             height: 50px;
             width: 80px;
             justify-content: space-between;
-            margin-left: 75%;
+            margin-left: 70%;
         }
         #icon2{
             display: none;
@@ -323,7 +383,6 @@ body{
     .block1{
         position: relative;
         z-index: -1;
-        margin-top: ;
         text-align: center;
     }
         img{
@@ -359,7 +418,7 @@ body{
     }    
         .blog{
             width: 40vw;
-            height: 16vw;
+            height: 20vw;
             display: inline-block;
             margin-right: 15px;
             text-decoration: none;
@@ -394,5 +453,198 @@ body{
         font-size: 12px;
         margin-top: 80px;
     }
+    .block3{
+        width: 85%;
+        margin: auto;
+        margin-top: 20px;
+    }
+        .block3-1{
+            border-bottom: solid 1px rgba(233, 233, 233, 0.76);
+            height: 60px;
+            width: 100%;
+            display: flex;
+            align-items: center;
+        }
+            .block3-1a{
+                width: 13%;
+                display: flex;
+                flex-direction: column;
+                font-family: 'Noto Sans', sans-serif;
+                font-size: 22px;
+                font-weight: bolder;
+            }
+                .block3-1a>span{
+                    font-size: 10px;
+                    color: rgba(184, 184, 184, 0.582);
+                    font-weight: 500;
+                }
+            .block3-1b{
+                font-family: 'Noto Sans', sans-serif;
+                font-size: 14px;
+                padding-left: 15px;
+                font-weight: bolder;
+            }
 }
-@media(max-width: 768px) {}
+@media(max-width: 480px) {
+    .head{
+        height: 50px;
+        width: 100%;
+        border-bottom: solid 0.5px lightgray;
+        top: 0;
+        background-color: white;
+        z-index: 2;
+        display: flex;
+    }
+        #icon3{
+            display: flex;
+            align-items: center;
+            height: 50px;
+            margin-left: 7%;
+            font-size: 20px;
+        }
+        .head>img{
+            position: absolute;
+            height: 30px;
+            width: 120px;
+            left: 11%;
+            top: -63px;
+        }
+        #menu{
+            display: none;
+            justify-content: space-between;
+            align-items: center;
+            text-align: center;
+            width: 24%;
+            height: 50px;
+            margin-left: 39%;
+        }
+            #menu>a{
+                text-decoration: none;
+                color: rgb(41, 41, 41);
+                font-family: 'Noto Sans', sans-serif;
+                font-size: 10px;
+                margin-right: 10px;
+                font-weight: bold;
+            }
+        #icon{
+            color: rgba(122, 122, 122, 0.603);
+            font-size: 12px;
+            display: flex;
+            align-items: center;
+            height: 50px;
+            width: 80px;
+            justify-content: space-between;
+            margin-left: 65%;
+        }
+        #icon2{
+            display: none;
+            align-items: center;
+            height: 50px;
+            margin-left: 3%;
+            font-size: 13px;
+        }
+    .block1{
+        position: relative;
+        z-index: -1;
+        text-align: center;
+    }
+        img{
+            width: 36vw;
+            border-radius: 50%;
+            margin-top: 75px;
+            margin-bottom: 0;
+        }
+        h1{
+            font-size: 50px;
+            font-family: 'Poppins', sans-serif;
+        }
+        .text1{
+            margin-top: -40px;
+            margin-left: 10px;
+            color:white;
+        }
+        .text2{
+            margin-top: -105px;
+            margin-left: 5px;
+        }
+        .block1-text{
+            margin-top: -5vw;
+        }
+            .text3{
+                font-family: 'Poppins';
+                font-size: 25px;
+                margin-top: 0;
+                line-height: 10px;
+            }
+    .block2{
+        margin-top: 80px;
+    }    
+        .blog{
+            width: 40vw;
+            height: 15vw;
+            display: inline-block;
+            margin-right: 15px;
+            text-decoration: none;
+            color: white;
+            font-family: 'Noto Sans', sans-serif;
+            font-size: 13px;
+            font-weight: 600;
+            padding: auto;
+            padding-top: 80px;
+            filter: grayscale(20%)  saturate(100%);
+            margin-top: 15px;
+        }
+            #blog1{
+                background-image: url(https://themes.pixelwars.org/impose/wp-content/uploads/2015/11/000-1024x1024.jpg);
+                background-size: cover;
+            }
+            #blog2{
+                background-image: url(https://themes.pixelwars.org/impose/wp-content/uploads/2015/11/05-1-683x1024.jpg);
+                background-size: cover;
+            }
+            #blog3{
+                background-image: url(https://themes.pixelwars.org/impose/wp-content/uploads/2015/11/02-2-683x1024.jpg);
+                background-size: cover;
+            }
+            #blog4{
+                background-image: url(https://themes.pixelwars.org/impose/wp-content/uploads/2015/11/aa-1024x802.jpg);
+                background-size: cover;
+            }
+    .text4{
+        color: rgb(167, 167, 167);
+        font-family: 'Noto Sans', sans-serif;
+        font-size: 12px;
+        margin-top: 80px;
+    }
+    .block3{
+        width: 85%;
+        margin: auto;
+        margin-top: 20px;
+    }
+        .block3-1{
+            border-bottom: solid 1px rgba(233, 233, 233, 0.76);
+            height: 60px;
+            width: 100%;
+            display: flex;
+            align-items: center;
+        }
+            .block3-1a{
+                width: 13%;
+                display: flex;
+                flex-direction: column;
+                font-family: 'Noto Sans', sans-serif;
+                font-size: 22px;
+                font-weight: bolder;
+            }
+                .block3-1a>span{
+                    font-size: 10px;
+                    color: rgba(184, 184, 184, 0.582);
+                    font-weight: 500;
+                }
+            .block3-1b{
+                font-family: 'Noto Sans', sans-serif;
+                font-size: 14px;
+                padding-left: 15px;
+                font-weight: bolder;
+            }
+}
