--- a/BT_S-Group/BT_Animation/Loading1/style.css
+++ b/BT_S-Group/BT_Animation/Loading1/style.css
@@ -12,6 +12,8 @@ div{
     animation: square 1.2s infinite ease-in-out;
     -webkit-animation: square 1.2s infinite ease-in-out;
     animation-play-state: running;
+    display: block;
+    margin-top: 20%;
 }
 
 @keyframes square {
