--- a/BT_S-Group/Buoi8_scss/style.scss
+++ b/BT_S-Group/Buoi8_scss/style.scss
@@ -1,9 +1,11 @@
 body{
     margin: 0;
 }
-menu{
+.menu{
     width: 20%;
     height: 400px;
+    border: solid;
+    border-radius: 10px;
     li{
         height: 50px;
         border-bottom: solid 0.5px lightgray;
