--- a/BT_S-Group/CV/style.css
+++ b/BT_S-Group/CV/style.css
@@ -7,27 +7,77 @@ body{
         background-repeat: no-repeat;
         width: 100%;
         height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #030507 !important;
+    }
+    .bg{
+        background-color: #030507;
+        opacity: 0.4;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        z-index: 1;
     }
         .nav1{
             position: fixed;
             right: 100px;
+            top: 0;
             width: 100%;
             height: 100px;
             background-color: rgba(0, 0, 0, 0.9);
+            border-bottom: solid 1.5px rgba(122, 122, 122, 0.24);
+            border-right: solid 1.5px rgba(122, 122, 122, 0.24);
             display: flex;
             align-items: center;
+            z-index: 2;
         }
             .nav1>img{
                 width: 126px;
                 position: absolute;
                 left: 200px;
             }
+            .bar{
+                width: 37px;
+                height: 44px;
+                position: absolute;
+                right: 30px;
+                background-color: transparent;
+                border: none;
+            }
+            .bar>span{
+                display: block;
+                position: absolute;
+                right: 0;
+                margin: 0;
+            }
+                .bar>span:nth-child(1){
+                    height: 2px;
+                    top: 25%;
+                    width: 100%;
+                    border-top: solid 2px white;
+                }
+                .bar>span:nth-child(2){
+                    height: 2px;
+                    width: 70%;
+                    top: 45%;
+                    border-top: solid 2px white;
+                }
+                .bar>span:nth-child(3){
+                    height: 2px;
+                    top: 60%;
+                    width: 50%;
+                    border-bottom: solid 2px white;
+                }
         .nav2{
             position: fixed;
             bottom: 100px;
+            left: 0;
             width: 100px;
             height: 100%;
             background-color: rgba(0, 0, 0, 0.9);
+            z-index: 2;
         }
             .icon{
                 display: flex;
@@ -41,3 +91,52 @@ body{
                 justify-content: space-between;
                 align-items: center;
             }
+        .info{
+            color: white;
+            text-align: center;
+            font-family:'Open Sans', sans-serif;
+            font-size: 17px;
+            height: 200px;
+            z-index: 2;
+        }
+            .info>h1{
+                font-family: 'Montserrat', sans-serif;
+                font-size: 48px;
+                line-height: 60px;
+                margin-bottom: 16px;
+                margin-top: 22px;
+                letter-spacing: 5px;
+            }
+            .info>p{
+                margin-bottom: 48px;
+                line-height: 34px;
+                font-weight: bold;
+                letter-spacing: 0.8px;
+            }
+            .button1{
+                font-size: 14px;
+                color: #232527;
+                line-height: 28px;
+                padding: 7px 22px;
+                margin-right: 16px;
+                border: solid 1px white;
+            }
+            .button2{
+                font-size: 14px;
+                line-height: 28px;
+                padding: 7px 22px;
+                margin: 0;
+                background-color: transparent;
+                color: white;
+                border: solid 1px white;
+            }
+        .note{
+            color: white;
+            position: absolute;
+            font-family: 'Open Sans', sans-serif;
+            font-weight: bold;
+            font-size: 14px;
+            bottom: 10px;
+            right: 35px;
+            z-index: 2;
+        }
