--- a/BT_S-Group/CV/style.css
+++ b/BT_S-Group/CV/style.css
@@ -11,15 +11,16 @@ body{
         justify-content: center;
         align-items: center;
         background-color: #030507 !important;
+        position: fixed;
     }
-    .bg{
-        background-color: #030507;
-        opacity: 0.4;
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        z-index: 1;
-    }
+        .bg{
+            background-color: #030507;
+            opacity: 0.4;
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            z-index: 1;
+        }
         .nav1{
             position: fixed;
             right: 100px;
@@ -31,7 +32,7 @@ body{
             border-right: solid 1.5px rgba(122, 122, 122, 0.24);
             display: flex;
             align-items: center;
-            z-index: 2;
+            z-index: 5;
         }
             .nav1>img{
                 width: 126px;
@@ -77,7 +78,7 @@ body{
             width: 100px;
             height: 100%;
             background-color: rgba(0, 0, 0, 0.9);
-            z-index: 2;
+            z-index: 5;
         }
             .icon{
                 display: flex;
@@ -96,7 +97,6 @@ body{
             text-align: center;
             font-family:'Open Sans', sans-serif;
             font-size: 17px;
-            height: 200px;
             z-index: 2;
         }
             .info>h1{
@@ -104,7 +104,7 @@ body{
                 font-size: 48px;
                 line-height: 60px;
                 margin-bottom: 16px;
-                margin-top: 22px;
+                margin-top: 50px;
                 letter-spacing: 5px;
             }
             .info>p{
@@ -120,6 +120,7 @@ body{
                 padding: 7px 22px;
                 margin-right: 16px;
                 border: solid 1px white;
+                letter-spacing: 0.8px;
             }
             .button2{
                 font-size: 14px;
@@ -128,6 +129,12 @@ body{
                 margin: 0;
                 background-color: transparent;
                 color: white;
+                border: solid 1px white;
+                letter-spacing: 0.8px;
+            }
+            .button2:hover{
+                color: #232527;
+                background-color: white;
                 border: solid 1px white;
             }
         .note{
@@ -140,3 +147,64 @@ body{
             right: 35px;
             z-index: 2;
         }
+    .blockbody{
+        width: 50%;
+        position: absolute;
+        right: 0;
+        top: 0;
+        background-color: white;
+        z-index: 3;
+    }
+        .work{
+            background-color: #f7f7f7;
+        }
+
+@media (max-width: 1200px) {
+    .nav1{
+        right: 0;
+        height: 74px;
+    }
+        .nav1>img{
+            left: 30px;
+        }
+    .nav2{
+        display: none;
+    }
+}
+
+@media (max-width: 768px) {
+    .home{
+        height: 420px;
+    }
+        .bg{
+            height: 420px;
+        }
+        .info{
+            margin-top: 50px;
+        }
+            .button1{
+                margin-right:0;
+            }
+}
+
+@media (max-width: 470px) {
+    .home{
+        height: 480px;
+    }
+        .bg{
+            height: 480px;
+        }
+        .info{
+            width: 90%;
+            margin-top: 20px;
+        }
+        .button1{
+            width: 100%;
+            display: block;
+        }
+        .button2{
+            width: 100%;
+            display: block;
+            margin-top: 20px;
+        }
+}
