--- a/BT_S-Group/CV/style.css
+++ b/BT_S-Group/CV/style.css
@@ -182,19 +182,20 @@ body{
             color: #3c55e6;
             transition: 0.5s;
         }
+        .container{
+            margin: 0 50px;
+        }
         .title{
             font-family: 'Montserrat', sans-serif;  
             font-size: 32px;
             font-weight: 300;
             line-height: 48px;  
-            margin: 0 50px;
             margin-bottom: 24px;
         }
         .text1{
             font-family:'Open Sans', sans-serif;
             font-size: 14px;
             line-height: 28px;
-            margin: 0 50px;
             font-weight: 400;
         }
         #name{
@@ -203,6 +204,7 @@ body{
             display: flex;
             flex-direction: column;
             justify-content: center;
+            align-items: center;
         }
         .work{
             background-color: #f7f7f7;
@@ -210,15 +212,16 @@ body{
             display: flex;
             flex-direction: column;
             justify-content: center;
+            align-items: center;
         }
-            .work>h1{
-                margin-top: 80px;
+            .container>h1{
+                margin-top: 50px;
             }
-            .work>p{
+            .container>p{
                 margin-bottom: 48px;
             }
             #table1{
-                margin: 0 48px;
+                width: 100%;
                 margin-bottom: 0;
                 color: #232527;
             }
@@ -245,42 +248,45 @@ body{
                         margin-top: 0;
                         margin-bottom: 44px;
                     }
-        #portfolio>p{
-            margin-bottom: 48px;
+        #portfolio{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
         }
-        #p-button{
-            margin: 0 50px;
-        }
-        .button4{
-            border: none;
-            border-bottom: solid 1px;
-            text-align: left;
-            background-color: transparent;
-            padding-left: 0;
-            padding-right: 27px;
-            font-size: 14px;
-            font-family: 'Open Sans', sans-serif;
-            line-height: 28px;
-            letter-spacing: 3px;
-            margin-right: 27px;
-        }
+            .button4{
+                border: none;
+                border-bottom: solid 1px;
+                text-align: left;
+                background-color: transparent;
+                padding-left: 0;
+                padding-right: 27px;
+                font-size: 14px;
+                font-family: 'Open Sans', sans-serif;
+                line-height: 28px;
+                letter-spacing: 3px;
+                margin-right: 27px;
+            }
         #contact{
             display: flex;
             flex-direction: column;
             justify-content: center;
+            align-items: center;
+            padding: 80px 0;
         }
             #text2{
                 font-family:'Open Sans', sans-serif;
                 font-size: 14px;
                 line-height: 28px;
-                margin: 0 50px 46px 50px;
+                margin-bottom: 46px;
                 font-weight: 400;
                 width: 62%;
             }
             #table2{
-                margin: 0 33px;
+                width: 100%;
                 margin-bottom: 48px;
                 color: #232527;
+                margin: 0 -15px;
             }
             .cell2{
                 width: 33.333%;
@@ -296,8 +302,63 @@ body{
                     font-weight: 400;
                     margin-top: 0;
                 }
+            #input{
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+            } 
+                input{
+                    font-size: 14px;
+                    line-height: 28px;
+                    font-family: 'Open Sans', sans-serif;
+                    padding: 3px 12px;
+                    border: solid 1px #cfd0d1;
+                }  
+                #input1{
+                    margin-bottom: 15px;
+                    width: 100%;
+                    display: flex;
+                    justify-content: space-between;
+                }
+                    .input1a{
+                        margin-right: 15px;
+                        width: 100%;
+                    }
+                    .input1b{
+                        margin-left: 15px;
+                        width: 100%;
+                    }
+                #input2{
+                    margin-bottom: 15px;
+                } 
+                #input3{
+                    height: 212px;
+                    resize: vertical;
+                    overflow: auto;
+                    padding: 7px 12px;
+                    font-size: 14px;
+                    line-height: 28px;
+                    font-family: 'Open Sans', sans-serif;
+                    border: solid 1px #cfd0d1;
+                    margin-bottom: 40px;
+                }
+            #button5{
+                background-color: #3c55e6;
+                width: 140px;
+                color: white;
+                border: none;
+                font-size: 14px;
+                line-height: 28px;
+                font-family: 'Open Sans', sans-serif;
+                padding: 7px 22px;                    
+                display: inline-block;
 
+            }
+            
 @media (max-width: 1200px) {
+    .container{
+        max-width: 960px;
+    }
     .nav1{
         right: 0;
         height: 74px;
@@ -321,9 +382,24 @@ body{
         #name{
             margin-top: 0;
         }
+        .container2{
+            max-width: 960px;
+        }
+            #text2{
+                width: 100%;
+            }
+}
+
+@media (max-width: 990px) {
+    .container{
+        max-width: 720px;
+    }
 }
 
 @media (max-width: 768px) {
+    .container{
+        max-width: 580px;
+    }
     .home{
         height: 420px;
     }
