--- a/BT_S-Group/CV/style.css
+++ b/BT_S-Group/CV/style.css
@@ -4,6 +4,35 @@ html{
 body{   
     margin: 0;
 }
+    #menu{
+        background-color: #000000e0;
+        position: fixed;
+        z-index: 4;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+        #tab{
+            margin-top: 100px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+
+        #tab>a{
+            text-decoration: none;
+            color: white;
+            font-family:'Open Sans', sans-serif;
+            font-size: 24px;
+            line-height: 32px;
+            font-weight: 400;
+            padding: 12px;
+            width: 100%;
+            text-align: center;
+        }
     .home{
         background-image: url(https://preview.erilisdesign.com/html/petri/demo/images/image-2.jpg);
         background-size: cover;
@@ -184,7 +213,7 @@ body{
         }
         .container{
             margin: 0 50px;
-            width: 85%;
+            width: 88%;
         }
         .title{
             font-family: 'Montserrat', sans-serif;  
@@ -307,6 +336,7 @@ body{
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
+                margin-top: 48px;
             } 
                 input{
                     font-size: 14px;
@@ -378,6 +408,7 @@ body{
         }
     #blockbody{
         position: relative;
+        display: block;
         width: 100%;
     }
         #name{
