--- a/BT_S-Group/CV/style.css
+++ b/BT_S-Group/CV/style.css
@@ -3,6 +3,7 @@ html{
 }
 body{   
     margin: 0;
+    position: relative;
 }
     #menu{
         background-color: #000000e0;
@@ -42,6 +43,10 @@ body{
         }
         .open{
             opacity: 1;
+            transition: all 0.5s ease-out;
+        }
+        .move2{
+            transform: translateY(0px);
             transition: all 0.5s ease-out;
         }
 
@@ -196,7 +201,7 @@ body{
             z-index: 2;
         }
     #blockbody{
-        width: 50%;
+        width: 50vw;
         position: absolute;
         right: 0;
         top: 0;
@@ -248,7 +253,7 @@ body{
             justify-content: center;
             align-items: center;
         }
-        .work{
+        #work{
             background-color: #f7f7f7;
             height: 772px;
             display: flex;
@@ -293,8 +298,9 @@ body{
         #portfolio{
             display: flex;
             flex-direction: column;
-            justify-content: center;
             align-items: center;
+            height: 3000px;
+            position: relative;
         }
             .button4{
                 border: none;
@@ -309,6 +315,47 @@ body{
                 letter-spacing: 3px;
                 margin-right: 27px;
             }
+            #galery{
+                display: flex;
+                flex-wrap: wrap;
+                position: relative;
+                width: 100%;
+                height: 2000px;
+                margin-top: 48px;
+            }
+                #galery>article{
+                    margin: 0;
+                    padding: 0;
+                    width: 50%;
+                    z-index: 10;
+                    position: absolute;
+                }
+                .size1{
+                    width: 25vw;
+                    height: 33.333vw;
+                }
+                .size2{
+                    width: 25vw;
+                    height: 25vw;
+                }
+                .left{
+                    left: 0;
+                }
+                .right{
+                    left: 25vw;
+                }
+                .blog{
+                    position: relative;
+                }
+                    .img{
+                        width: 100%;
+                    }
+                    .p-text{
+                        position: absolute;
+                        z-index: 2;
+                        
+                  
+                    }
         #contact{
             display: flex;
             flex-direction: column;
@@ -435,6 +482,9 @@ body{
             #text2{
                 width: 100%;
             }
+        .right{
+            left: 50vw;
+        }
 }
 
 @media (max-width: 990px) {
