--- a/BT_S-Group/CV/style.css
+++ b/BT_S-Group/CV/style.css
@@ -298,9 +298,10 @@ body{
         #portfolio{
             display: flex;
             flex-direction: column;
+            justify-content: center;
             align-items: center;
-            height: 3000px;
             position: relative;
+            margin-top: 50px;
         }
             .button4{
                 border: none;
@@ -316,19 +317,15 @@ body{
                 margin-right: 27px;
             }
             #galery{
-                display: flex;
-                flex-wrap: wrap;
-                position: relative;
+
                 width: 100%;
-                height: 2000px;
+
                 margin-top: 48px;
             }
                 #galery>article{
                     margin: 0;
                     padding: 0;
                     width: 50%;
-                    z-index: 10;
-                    position: absolute;
                 }
                 .size1{
                     width: 25vw;
@@ -338,30 +335,25 @@ body{
                     width: 25vw;
                     height: 25vw;
                 }
-                .left{
-                    left: 0;
-                }
                 .right{
-                    left: 25vw;
+                    float: right;
                 }
-                .blog{
-                    position: relative;
+                .left{
+                    float: left;
                 }
                     .img{
                         width: 100%;
                     }
                     .p-text{
-                        position: absolute;
-                        z-index: 2;
-                        
-                  
+                        display: none;
                     }
         #contact{
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            padding: 80px 0;
+            height: 920px;
+            box-sizing: border-box;
         }
             #text2{
                 font-family:'Open Sans', sans-serif;
@@ -442,7 +434,7 @@ body{
                 font-family: 'Open Sans', sans-serif;
                 padding: 7px 22px;                    
                 display: inline-block;
-
+                margin-bottom: 50px;
             }
             
 @media (max-width: 1200px) {
@@ -482,9 +474,14 @@ body{
             #text2{
                 width: 100%;
             }
-        .right{
-            left: 50vw;
-        }
+            .size1{
+                width: 50vw;
+                height: 66.666vw;
+            }
+            .size2{
+                width: 50vw;
+                height: 50vw;
+            }
 }
 
 @media (max-width: 990px) {
@@ -495,7 +492,7 @@ body{
 
 @media (max-width: 768px) {
     .container{
-        max-width: 580px;
+        max-width: 540px;
     }
     .home{
         height: 420px;
@@ -511,9 +508,26 @@ body{
             }
 }
 
+@media (max-width: 575px) {
+    .container{
+        max-width: 550px;
+    }
+    #galery>article{
+        width: 100%;
+    }
+    .size1{
+        width: 100vw;
+        height: 133.333vw;
+    }
+    .size2{
+        width: 100vw;
+        height: 100vw;
+    }
+}
+
 @media (max-width: 470px) {
     .container{
-        max-width: 580px;
+        max-width: 450px;
     }
     .home{
         height: 480px;
