--- a/BT_S-Group/CV/style.css
+++ b/BT_S-Group/CV/style.css
@@ -301,7 +301,6 @@ body{
             justify-content: center;
             align-items: center;
             position: relative;
-            margin-top: 50px;
         }
             .button4{
                 border: none;
@@ -326,6 +325,7 @@ body{
                     margin: 0;
                     padding: 0;
                     width: 50%;
+                    position: relative;
                 }
                 .size1{
                     width: 25vw;
@@ -343,9 +343,63 @@ body{
                 }
                     .img{
                         width: 100%;
+                        height: 100%;
+                    }
+                    .blog{
+                        height: 100%;
                     }
                     .p-text{
-                        display: none;
+                        position: absolute;
+                        z-index: 10;
+                        top: 0;
+                        color: white;
+                        width: 100%;
+                        height: 100%;
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        box-sizing: border-box;
+                    }
+                        .p-text>*{
+                            position: relative;
+                        }
+                        .p-text>h4{
+                            font-family: 'Montserrat', sans-serif;  
+                            font-weight: 500;
+                            line-height: 30px;
+                            width: 85%;
+                            margin-bottom: 0;
+                        }
+                        .p-text>p{
+                            font-family:'Open Sans', sans-serif;
+                            font-size: 14px;
+                            line-height: 28px;
+                            font-style: italic;
+                            width: 85%;
+                            margin-top: 0;
+                        }
+                        .p-text:before{
+                            content: '';
+                            position: absolute;
+                            top: 0;
+                            left: 0;
+                            right: 0;
+                            height: 80%;
+                            opacity: 0.5;
+                            background: linear-gradient(to bottom,#030507 0,rgba(0,0,0,0) 100%);
+                        }
+                    .p-background{
+                        background-color:#030507!important;
+                        width: 100%;
+                        height: 100%;
+                        transition: all .3s ease-out;
+                        opacity: 0;
+                        position: absolute;
+                        z-index: 2;
+                        top: 0;
+                    }
+                    a:hover .p-background{
+                        opacity: 0.5;
                     }
         #contact{
             display: flex;
